fix(share): images appearing stretched

--- a/packages/share-theme/src/styles/content.css
+++ b/packages/share-theme/src/styles/content.css
@@ -46,6 +46,7 @@
 
 #content img {
     max-width: 100%;
+    height: auto;
 }
 
 body:not(.math-loaded) .math-tex {
